# pixel

./: .gitignore  CMakeLists.txt  drawfunk.cpp  drawfunk.h  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  mainly.cpp  maintesting.cpp  rita  savefunk.cpp  savefunk.h  skit.cpp  supertrasig_main.cpp  test.cpp  test2.cpp  test3.cpp
Safe/: 001 - fungerande rityta.cpp  002 - lägre processorkraft.cpp  003 - linjaler  004 - save.cpp  005 - skapar mapp o savar.cpp  006 - raka linjer med shift.cpp  007 - linjalsiffror.cpp  008 - erase men trasig shiftline.cpp  008 - erase, shiftline, menu.cpp  009 - erase X.cpp  010 - brush sizes not working.cpp  011 - miniprogram med linjer.cpp  012 - preview linjer.cpp  013 - undo.cpp  014 - load.cpp  0XX - is broken
